--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.58.0",
+    "axios": "^1.12.2",
     "form-data": "^4.0.4",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
