--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "form-data": "^4.0.4",
     "lucide-react": "^0.544.0",
     "mammoth": "^1.11.0",
+    "openai": "^6.1.0",
     "pdfjs-dist": "^4.0.379",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
