--- a/netlify.toml
+++ b/netlify.toml
@@ -14,6 +14,7 @@
 [functions]
   directory = "netlify/functions"
   node_bundler = "esbuild"
+  external_node_modules = ["@sendgrid/mail"]
 
 # Optimization settings
 [build.processing]
