Fix: Remove invalid .netlify redirect rule

--- a/netlify.toml
+++ b/netlify.toml
@@ -10,11 +10,8 @@
   to = "/qr.html"
   status = 200
 
-# Allow Netlify functions to pass through (must come before catch-all)
-[[redirects]]
-  from = "/.netlify/functions/*"
-  to = "/.netlify/functions/:splat"
-  status = 200
+# Note: Netlify functions at /.netlify/functions/* are handled automatically
+# No redirect rule needed - they work out of the box
 
 # SPA catch-all - serves index.html for all other routes
 [[redirects]]
