--- a/netlify.toml
+++ b/netlify.toml
@@ -60,6 +60,9 @@
 [functions."qbo-search-customer"]
   timeout = 60
 
+[functions."import-communities"]
+  timeout = 60
+
 # Optimization settings
 [build.processing]
   skip_processing = false
